# flutter-playground

./: .gitignore  .tool-versions  Cargo.toml  Makefile  README.md  analysis_options.yaml  bindings.h  build.rs  build.yaml  cbindgen.toml  miniserve  pubspec.yaml  root.proto
android/: .project
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
assets/: example.md  markdown_reference.md  template.html
benches/: benches.rs  node_bench.dart  test.xml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/web/: manifest.json
lib/: bindings.dart  ffi.dart  flutter_playground.dart  flutter_playground_web.dart  main.dart
lib/api/: hacker_news.dart
lib/bindings/: bindings.dart  native.dart  stub.dart  web.dart
lib/helpers/: handlers.dart  markdown.dart  utils.dart
lib/helpers/markdown/: markdown.dart  native.dart  web.dart
lib/l10n/: intl_ja.arb
lib/proto/: root.pb.dart  root.pbenum.dart  root.pbjson.dart  root.pbserver.dart
lib/screens/: flex_test.dart  markdown.dart  settings.dart  todos.dart
lib/state/: dark.dart  markdown.dart  todos.dart
lib/types/: Todo.dart  Todo.g.dart  ast_element.dart  item.dart  item.g.dart  json_element.dart  native_node.dart  node.dart  node.freezed.dart  preferences.dart  preferences.g.dart  todo.dart  todo.g.dart  user.dart  user.g.dart
lib/widgets/: common_app_bar.dart  editor.dart  flexbox.dart  front_page_item.dart  handlers.dart  tex_markdown.dart
lib/widgets/markdown/: editor.dart  markdown_bottom_sheet.dart  tex_markdown.dart
lib/widgets/markdown/fast_parse/: fast_parse.dart  fast_parse.web.dart
lib/widgets/markdown/impls/: native.dart  web.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc
src/: README.md  lib.rs  main.rs  math.rs  slice.rs
src/frontends/: ffi.rs  mod.rs  types.rs  wasm.rs
src/impls/: ast.rs  json.rs  mod.rs  tree_sitter.rs
src/protos/: root.rs
test/: .diff  flutter_playground_test.dart  hacker_news_test.dart  md_test.dart  node_test.dart  reference.json  rust.json  widget_test.dart
web/: index.html  init.js
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc
windows/runner/: Runner.rc  main.cpp
