[package]
name = "flutter_playground"
version = "0.1.0"
authors = ["Viet Dinh <54ckb0y789@gmail.com>"]
edition = "2018"

[lib]
# Criterion cannot test without emitting an rlib.
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "*", default_features = false, features = [
    "simd",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nom = "*"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }
serde-wasm-bindgen = "0.3.0"
tree-sitter = "0.19.5"
tree-sitter-markdown = "*"

[dev-dependencies]
criterion = "0.3"
regex = "*"

[[bench]]
name = "benches"
harness = false

[profile.release]
lto = true
